Fixed Exo train schedule
Separated function for each gtfs (STM and Exo) and fixed the train lines not showing

--- a/static/index.css
+++ b/static/index.css
@@ -191,6 +191,23 @@ button {
   white-space: nowrap;
   z-index: 3;
 }
+
+.frame-2-black {
+  flex-shrink: 0;
+  flex-basis: auto;
+  position: relative;
+  height: 43px;
+  color: #000000;
+  font-family: Atlas Grotesk, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 900;
+  line-height: 43px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 3;
+}
+
+
 .frame-3 {
   display: flex;
   flex-direction: column;
@@ -904,7 +921,8 @@ button {
   width: 28px;
   height: 28px;
   display: inline-block;
-  margin-left: 2px; /* Space between time and icon */
+  margin-left: 1px; /* Space between time and icon */
+  margin-top: -25px;
 }
 
 .blinking-icon_train {
